{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 10,
  "lineage": "b061e88e-62b9-edfd-9370-83c38cfdd6ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:internet-gateway/igw-0639abd8f2f359907",
            "id": "igw-0639abd8f2f359907",
            "owner_id": "631231558475",
            "tags": {
              "Name": "MY-IGW"
            },
            "tags_all": {
              "Name": "MY-IGW"
            },
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:route-table/rtb-067bfde3309db12ae",
            "id": "rtb-067bfde3309db12ae",
            "owner_id": "631231558475",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0639abd8f2f359907",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de2dfd1e321203fc",
            "route_table_id": "rtb-067bfde3309db12ae",
            "subnet_id": "subnet-0e98637732c48fefc"
          },
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_route_table.Main",
            "aws_subnet.Public_subnet",
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:security-group/sg-0ffb78ea0bd9b3af7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffb78ea0bd9b3af7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "631231558475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:subnet/subnet-0b1257d5195a17a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1257d5195a17a4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631231558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPriv1"
            },
            "tags_all": {
              "Name": "MyPriv1"
            },
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:subnet/subnet-0c948c22cbfb59ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c948c22cbfb59ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631231558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPriv2"
            },
            "tags_all": {
              "Name": "MyPriv2"
            },
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:subnet/subnet-087432fac639a4919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087432fac639a4919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631231558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPriv3"
            },
            "tags_all": {
              "Name": "MyPriv3"
            },
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:subnet/subnet-0e98637732c48fefc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "20.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e98637732c48fefc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631231558475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyPub"
            },
            "tags_all": {
              "Name": "MyPub"
            },
            "vpc_id": "vpc-022a0079f402aa249"
          },
          "dependencies": [
            "aws_vpc.IAC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IAC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631231558475:vpc/vpc-022a0079f402aa249",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-065e7ee6fbeebd3f6",
            "default_route_table_id": "rtb-09c786e21ad999e44",
            "default_security_group_id": "sg-07e0df115a0673a1e",
            "dhcp_options_id": "dopt-05198a5102ff30d94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022a0079f402aa249",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c786e21ad999e44",
            "owner_id": "631231558475",
            "tags": {
              "name": "MyVPC"
            },
            "tags_all": {
              "name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}